--- a/style.css
+++ b/style.css
@@ -48,13 +48,13 @@ li{
 
 }
 .ul-header>a:hover{
-    color: rgba(0, 0, 0, 0.687);
+   color: #414141;
     transform: scale(1.040);
     
 }
 .ul-header>a{
     transition: 100ms;
-    color: black;
+    color:  rgb(0, 0, 0);
     font-weight: 600;
 }
 
@@ -254,10 +254,15 @@ width: 25px;
 
     padding: 30px;
     overflow: hidden;
-    height: 400px;
+    max-height: 400px;
     width: 550px;
     background-color: #ffffff;
     border-radius: 30px;
+    overflow-y: scroll;
+
+}
+.Information-ShowMore::-webkit-scrollbar {
+  display: none;
 }
 .Information-ShowMoree{
     display: flex;
@@ -323,7 +328,7 @@ background-color: #3e500f;
 
 #burger-menu{
     position: absolute;
-    background-color: orange;
+    background-color: rgb(0, 0, 0);
     display: none;
     flex-direction: column;
     left: 0px;
@@ -368,6 +373,7 @@ background-color: #3e500f;
   .section1-designe{
     display: none;
   }
+
 }
 
 @media  (max-width: 699.9px) {
@@ -397,6 +403,8 @@ background-color: #3e500f;
 .section2-title{
     font-size: 15px;
 }
+
+ 
 }
 
 @media  (max-width: 599.9px) {
@@ -410,7 +418,17 @@ background-color: #3e500f;
   .ul-header{
     flex-direction: column;
   }
+  .ul-header>a{
+    color: white;
+  }
+  .ul-header>a:hover{
+    background-image: linear-gradient(rgb(255, 255, 255), rgba(255, 255, 0, 0.265));
+    color: transparent;
+    background-clip: text;
+  }
+  
 }
+
 @media  (max-width: 499.9px) {
   .section1-title>h1 {
     font-size: 70px;
